# f-templa

./: .gitignore  .gitmodules  CDropSource.cpp  CDropSource.hpp  CDropTarget.cpp  CDropTarget.hpp  CMakeLists.txt  CenterWindowDx.cpp  FolderDeTempla.cpp  FolderDeTempla_res.rc  HISTORY.txt  InputBox.cpp  InputBox.hpp  LICENSE.txt  README.md  README.txt  ScrollView.cpp  ScrollView.hpp  build.bat  f-templa.cpp  f-templa.hpp  f-templa_res.rc  fdt_file.cpp  fdt_file.hpp  resource.h
Templates/: {{ユーザー名}}さん、こんにちは.txt  {{名前}}さん、こんにちは.txt  日時のテスト{{日時}}.txt
Templates/ConsoleApp/: CMakeLists.txt  main.cpp
Templates/HelloWorldInC/: CMakeLists.txt
Templates/HelloWorldInCpp/: LICENSE.txt  README.txt  main.cpp
Templates/TimeStampTest{{NOW}}/: TIMESTAMP{{TIMESTAMP}}.txt
Templates/WebViewAndroidApp/: settings.gradle
Templates/WebViewAndroidApp/app/: build.gradle
Templates/WebViewAndroidApp/app/src/androidTest/java/com/{{company_name_in_lower_case}}/{{app_name_in_lower_case}}/: ExampleInstrumentedTest.kt
Templates/WebViewAndroidApp/app/src/androidTest/java/com/{{company_name}}/{{app_name}}/: ExampleInstrumentedTest.kt
Templates/WebViewAndroidApp/app/src/main/: AndroidManifest.xml
Templates/WebViewAndroidApp/app/src/main/java/com/{{company_name_in_lower_case}}/{{app_name_in_lower_case}}/: MainActivity.kt  MainRepository.kt  MyWebChromeClient.kt  MyWebViewClient.kt
Templates/WebViewAndroidApp/app/src/main/java/com/{{company_name}}/{{app_name}}/: MainActivity.kt  MainRepository.kt  MyWebChromeClient.kt  MyWebViewClient.kt
Templates/WebViewAndroidApp/app/src/main/res/layout/: activity_main.xml
Templates/WebViewAndroidApp/app/src/main/res/values/: strings.xml  themes.xml
Templates/WebViewAndroidApp/app/src/main/res/values-night/: themes.xml
Templates/WebViewAndroidApp/app/src/test/java/com/{{company_name_in_lower_case}}/{{app_name_in_lower_case}}/: ExampleUnitTest.kt
Templates/WebViewAndroidApp/app/src/test/java/com/{{company_name}}/{{app_name}}/: ExampleUnitTest.kt
Templates/WebViewAndroidApp/gradle/wrapper/: gradle-wrapper.properties
img/: templa.xcf
